<resources>
    <string name="app_name">Oolie</string>
    <string name="app_welcome_note">Welcome to Oolie</string>
    <string name="email_hint">email address</string>
    <string name="pwd_hint">password</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="create_acc_btn">Create Account</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_back">Back</string>
    <string name="user_name">username</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="class_of">Class of:</string>
    <string name="grad_yr">Graduation Year</string>
    <string name="school_name">School Name</string>
    <string name="write_a_message">Write a Message</string>
    <string name="agree">I Agree</string>
    <string name="dontagree">I don\'t Agree</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string-array name="grad_levels">
        <item>Graduation Year…</item>
        <item>2017(Senior)</item>
        <item>2018(Junior)</item>
        <item>2019(Sophomore)</item>
        <item>2020(Freshman)</item>
    </string-array>
    <string name="facebook_app_id">109236476383426</string>
    <string name="title_activity_homefeed">HomefeedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>