<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.oolie.view.Login.SignupActivity">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <TextView
        android:id="@+id/textViewSignUp"
        style="@style/TextStylePrimary.SignUp"
        android:text="@string/sign_up"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextUsrName"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewSignUp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email_hint"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextUsrName"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTextUsrName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsrName"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmail"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextLastName"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintLeft_toLeftOf="@+id/editTextFirstName"
        app:layout_constraintRight_toRightOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <TextView
        android:id="@+id/textViewClassOf"
        style="@style/TextStylePrimary.SignUp"
        android:text="@string/class_of"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextLastName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <TextView
        android:id="@+id/grad_level"
        style="@style/CustomButtonStyle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:paddingTop="12dp"
        android:layout_marginLeft="0dp"
        android:hint="@string/grad_yr"
        android:textColorHint="@color/BLACK"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/textViewClassOf"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewClassOf" />

    <EditText
        android:id="@+id/editTextPwd1"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pwd_hint"
        app:layout_constraintLeft_toLeftOf="@+id/grad_level"
        app:layout_constraintTop_toBottomOf="@+id/grad_level" />

    <EditText
        android:id="@+id/editTextPwd2"
        android:background="@drawable/edit_textbox_style"
        style="@style/EditTextBox"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pwd_hint"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPwd1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPwd1" />

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/CustomButtonStyle"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPwd2"
        app:layout_constraintRight_toRightOf="@+id/editTextPwd2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPwd2" />

    <Button
        android:id="@+id/button2"
        style="@style/CustomButtonStyle"
        android:text="@string/sign_up_back"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSignUp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonSignUp" />
</android.support.constraint.ConstraintLayout>
